[gd_scene load_steps=5 format=3 uid="uid://cs6rna5onrvrd"]

[ext_resource type="Script" uid="uid://vypge70fcnh0" path="res://scripts/life_points.gd" id="1_ks3p2"]
[ext_resource type="Texture2D" uid="uid://dua5u453jxfk8" path="res://assets/ui/points/brush_damage.png" id="1_w4rpa"]
[ext_resource type="AudioStream" uid="uid://bf4qjiokv26wx" path="res://assets/sfx/whip.wav" id="3_tx277"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ks3p2"]

[node name="LifePoints" type="Panel"]
top_level = true
offset_right = 186.0
offset_bottom = 176.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_ks3p2")
script = ExtResource("1_ks3p2")

[node name="LifePointsSprite" type="Sprite2D" parent="."]
position = Vector2(93, 87)
texture = ExtResource("1_w4rpa")
hframes = 10
vframes = 5
frame = 23

[node name="dmg_taken" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_tx277")
